please stop this torture
Friday Night Funkin' is an open-source donationware rhythm game first released in 2020 for a game jam. The game was developed by a team of four Newgrounds users, Cameron "Ninjamuffin99" Taylor, David "PhantomArcade" Brown, Isaac "kawaisprite" Garcia, and evilsk8r. Wikipedia
Initial release date: October 5, 2020
Developer: Cameron Taylor
Composer: Kawai Sprite
Platforms: Android, Web browser, Microsoft Windows, Linux, Macintosh operating systems
Publishers: Cameron Taylor, Mediatonic Game
Genres: Rhythm ga

--- a/assets/preload/data/out-of-time/out-of-time-easy.json
+++ b/assets/preload/data/out-of-time/out-of-time-easy.json
@@ -1,7 +1,7 @@
 {
  "song": {
   "player1": "bf-void",
-  "player2": "hex-angry",
+  "player2": "hex-swagger",
   "notes": [
    {
     "typeOfSection": 0,
